# fcastcheck

./: README.md  pyproject.toml
fcastcheck/: core.py  forecasting.py  utils.py
fcastcheck/routes/: accuracyUncertainty.py  chart.py  forecast.py  kernelDensity.py  metrics.py  predictionInterval.py  root.py
fcastcheck/test/: test_core.py
fcastcheck/web/static/scripts/: displayAccuracyUncertainty.js  displayHeatmap.js  displayIntervalChart.js  displayResidualDensity.js  displaychart.js  forecast.js  switchTheme.js
fcastcheck/web/static/styles/: bubbleChart.css  dashboard.css  forecast.css  heatmapChart.css  index.css  intervalChart.css  residualDensityChart.css
fcastcheck/web/templates/: bubbleChart.jinja2  dashboard.jinja2  footer.jinja2  forecast.jinja2  heatmapChart.jinja2  intervalChart.jinja2  navbar.jinja2  residualDensityChart.jinja2
timeseriesanalysispackage/: chart.py  core.py  forecasting.py  utils.py
timeseriesanalysispackage/test/: test_core.py
timeseriesanalysispackage/web/static/scripts/: displayAccuracyUncertainty.js  displayHeatmap.js  displaychart.js  switchTheme.js
timeseriesanalysispackage/web/static/styles/: dashboard.css  footer.css  index.css  navbar.css
timeseriesanalysispackage/web/templates/: dashboard.jinja2  index.html  index.jinja2  navbar.jinja2
