[tool.poetry]
name = "timeseriesanalysispackage"
version = "0.1.0"
description = "package for analysing time-series data and forecasts visually"
authors = ["Ryan Bendall <139355026+RB200468@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.poetry.scripts]
timeseriesanalysispackage = "timeseriesanalysispackage.core:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
