[tool.poetry]
name = "timeseriesanalysispackage"
version = "0.1.0"
description = "package for analysing time-series data and forecasts visually"
authors = ["Ryan Bendall <139355026+RB200468@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
requests = "^2.32.3"
jinja2 = "^3.1.5"
pandas = "^2.2.3"
numpy = "^2.2.1"
scikit-learn = "^1.6.1"
statsmodels = "^0.14.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.poetry.scripts]
timeseriesanalysispackage = "timeseriesanalysispackage.core:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
